# nbody-stdpar

./: CMakeLists.txt  LICENSE  README.md  build_nbody.sh  main.cc  math_functions.hh  math_functions_impl.hh  physics.hh  physics_impl.hh  system.hh  system_impl.hh  time_integration.hh  time_integration_impl.hh  utils.hh  utils_impl.hh  vec.hh
cmake/modules/: FindTBB.cmake
